<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task List App</string>
    <string name="action_settings">Settings</string>
    <string name="add_task">Add Task</string>
    <string name="title_create_task">Create Task</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="txt_task_title">Title</string>
    <string name="txt_task_description">Description</string>
    <string name="txt_task_due_date">Due Date</string>
    <string name="txt_task_category">Category</string>
    <string name="txt_task_status">Status</string>
    <string name="txt_task_priority">Priority</string>
    <string name="txt_send_email">Send email?</string>
    <string name="enter_desc">Enter description here</string>
    <string name="btn_create">Create</string>
    <string name="btn_edit">Save Changes</string>
    <string name="btn_status_complete">Complete</string>
    <string name="btn_status_pending">Pending</string>

</resources>
