<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <ImageView 
        android:id="@+id/list_image_priority"
        android:contentDescription="@string/txt_task_priority"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_weight="0"
        android:padding="10dp"
        android:background="#ff0000"
        />
    <TextView 
        android:id="@+id/list_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"         
        android:text="@string/txt_task_title"
        />
    <TextView 
        android:id="@+id/list_due_date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:text="@string/txt_task_due_date"
        />

</LinearLayout>
